2002-08-24  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in (DLL_IMPORTS): Move libuuid.a and libshell32.a to list
	rather than referring to them via -l.  Add DLL imports last in link
	line for new-cygwin.dll and cygrun.exe.

2002-08-19  Christopher Faylor  <cgf@redhat.com>

	* pinfo.h (pinfo::remember): Arrange for destructor call if
	proc_subproc returns error.
	* sigproc.cc (zombies): Store 1 + total zombies since proc_subproc uses
	NZOMBIES element.

2002-08-19  Corinna Vinschen  <corinna@vinschen.de>

	* pwdgrp.h (pwdgrp_read::pwdgrp_read): Remove.
	(pwdgrp_read::~pwdgrp_read): Ditto.
	(pwdgrp_read::open): Reset fh to NULL instead of INVALID_HANDLE_VALUE.
	(pwdgrp_read::close): Ditto.

2002-08-19  Christopher Faylor  <cgf@redhat.com>

	* fhandler.h (fhandler_console::send_winch_maybe): New method.
	* fhandler_console.cc (set_console_state_for_spawn): Remove if 0'ed
	code.
	(fhandler_console::send_winch_maybe): Define new method.
	(fhandler_console::read): Use send_winch_maybe where appropriate.
	(fhandler_console::init): Just call all tcsetattr rather than
	output_tcsetattr.
	* select.cc (peek_console): Reorganize so that send_winch_maybe is
	called for everything but keyboard input.

2002-08-18  Christopher Faylor  <cgf@redhat.com>

	* perthread.h (vfork_save): Add ctty, sid, pgid, exitval fields.
	(vfork_save::restore_pid): New method.
	(vfork_save::restore_exit): New method.
	* fork.cc (vfork): Save ctty, sid, pgid and restore them when returning
	to "parent".  Use exitval field if exiting but never created a new
	process.
	* syscalls.cc (setsid): Detect when in "vfork" and force an actual fork
	so that pid will be allocated (UGLY!).
	(getsid): New function.
	* dcrt0.cc (do_exit): Use vfork_save::restore_exit method for returning
	from a vfork.
	* spawn.cc (spawnve): Use vfork_save::{restore_pid,restore_exit}
	methods for returning from vfork.
	* cygwin.din: Export getsid.
	* include/cygwin/version.h: Bump api minor number.
