@@ -1,3 +1,11 @@
+2002-08-26  Christopher Faylor  <cgf@redhat.com>
+
+	* Makefile.in (cygcheck.exe): Make a -mno-cygwin program.
+	* cygrun.c (main): Export CYGWIN=ntsec unless otherwise set.
+
+	* shared.cc (shared_name): Only add build date to shared name when
+	*testing*.
+
 2002-08-24  Christopher Faylor  <cgf@redhat.com>
 
 	* Makefile.in (DLL_IMPORTS): Move libuuid.a and libshell32.a to list
